--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,21 +1,17 @@
 name: CI
-env:
-  CI: true
 
 on:
-  pull_request:
-    branches:
-      - v2
   push:
     branches:
-      - v2
+      - master
+  pull_request:
 
 jobs:
   test:
     strategy:
       matrix:
         node: ['10.x', '12.x']
-        os: [ubuntu-latest, macOS-latest]
+        os: [ubuntu-latest]
 
     runs-on: ${{ matrix.os }}
 
@@ -37,7 +33,5 @@ jobs:
             ${{ matrix.os }}-yarn-
 
       - run: yarn
-
       - run: yarn lint
-      - run: yarn build
       - run: yarn test
